--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 	<!--header bar-->
 	<div id="banner">
-		<h1>Pedi-Brain Atlas Teacher
+		<h1>Online Brainnetome Atlas Viewer
 			<button class="camera_reset_btn" onclick="resetCameraPos('axial')">
 				<img src='gfx/view_axial.png'/>
 			</button>
