--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Pedi-Brain Atlas Teacher</title>
+<title>Online Brainnetome Atlas Viewer</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="css/reset.css" />
 <link rel="stylesheet" type="text/css" href="css/jquery-ui-1.9.2.custom.css" />
